[package]
name = "rust_api_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"
rusqlite = {version = "0.26.3", features = ["bundled"]}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
